add charles stein

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -623,6 +623,19 @@
   series = {{{SIGMETRICS}}'93}
 }
 
+@article{ai-jun_bayesian_2010,
+  title = {Bayesian Variable Selection for Disease Classification Using Gene Expression Data},
+  author = {{Ai-Jun}, Yang and {Xin-Yuan}, Song},
+  year = {2010},
+  month = jan,
+  volume = {26},
+  pages = {215--222},
+  file = {/home/msca8h/Zotero/storage/IXZMVMAF/Ai-Jun and Xin-Yuan - 2010 - Bayesian variable selection for disease classifica.pdf},
+  journal = {Bioinformatics},
+  language = {en},
+  number = {2}
+}
+
 @book{ainslie_principles_2010,
   title = {Principles of Sonar Performance Modelling},
   author = {Ainslie, Michael Anthony},
@@ -1122,6 +1135,16 @@
   number = {11}
 }
 
+@inproceedings{bamler_perturbative_2017,
+  title = {Perturbative Black Box Variational Inference},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Bamler, Robert and Zhang, Cheng and Opper, Manfred and Mandt, Stephan},
+  year = {2017},
+  volume = {30},
+  publisher = {{Curran Associates, Inc.}},
+  file = {/home/msca8h/Zotero/storage/JSVVV2WU/Bamler et al. - 2017 - Perturbative Black Box Variational Inference.pdf}
+}
+
 @inproceedings{banicescu_balancing_1995,
   title = {Balancing {{Processor Loads}} and {{Exploiting Data Locality}} in {{N}}-{{Body Simulations}}},
   booktitle = {Supercomputing '95:{{Proceedings}} of the 1995 {{ACM}}/{{IEEE Conference}} on {{Supercomputing}}},
@@ -1154,6 +1177,31 @@
   journal = {Foundations of Data Science},
   language = {en},
   number = {2}
+}
+
+@article{baragatti_comments_2011,
+  title = {Comments on '{{Bayesian}} Variable Selection for Disease Classification Using Gene Expression Data'},
+  author = {Baragatti, M. C. and Pommeret, D.},
+  year = {2011},
+  month = apr,
+  volume = {27},
+  pages = {1194--1194},
+  file = {/home/msca8h/Zotero/storage/27IVLZBH/Baragatti and Pommeret - 2011 - Comments on 'Bayesian variable selection for disea.pdf},
+  journal = {Bioinformatics},
+  language = {en},
+  number = {8}
+}
+
+@article{baragatti_study_2012,
+  title = {A Study of Variable Selection Using $g$ -Prior Distribution with Ridge Parameter},
+  author = {Baragatti, M. and Pommeret, D.},
+  year = {2012},
+  month = jun,
+  volume = {56},
+  pages = {1920--1934},
+  journal = {Computational Statistics \& Data Analysis},
+  language = {en},
+  number = {6}
 }
 
 @inbook{barbakh_cross_2009,
@@ -1288,6 +1336,17 @@
   publisher = {{IEEE}},
   address = {{Denver, CO, USA}},
   file = {/home/msca8h/Zotero/storage/QL5ZBNKA/Beckingsale et al. - 2019 - RAJA Portable Performance for Large-Scale Scienti.pdf}
+}
+
+@article{beheshti_number_2018,
+  title = {Number of Source Signal Estimation by the Mean Squared Eigenvalue Error},
+  author = {Beheshti, Soosan and Sedghizadeh, Saba},
+  year = {2018},
+  month = nov,
+  volume = {66},
+  pages = {5694--5704},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {21}
 }
 
 @inproceedings{behzad_dynamic_2015,
@@ -1460,6 +1519,16 @@
   pages = {1--24},
   journal = {Journal of Machine Learning Research},
   number = {50}
+}
+
+@book{bernardo_bayesian_2004,
+  title = {Bayesian Theory},
+  author = {Bernardo, Jos{\'e} M. and Smith, Adrian F. M.},
+  year = {2004},
+  edition = {Repr},
+  publisher = {{Wiley}},
+  address = {{Chichester Weinheim}},
+  series = {Wiley Series in Probability and Statistics}
 }
 
 @article{bernton_locally_2015,
@@ -1956,6 +2025,17 @@
   journal = {International Journal of Parallel Programming},
   language = {en},
   number = {5-6}
+}
+
+@article{brown_inference_2010,
+  title = {Inference with Normal-Gamma Prior Distributions in Regression Problems},
+  author = {Brown, Philip J. and Griffin, Jim E.},
+  year = {2010},
+  month = mar,
+  volume = {5},
+  file = {/home/msca8h/Zotero/storage/7JKH4MRS/Brown and Griffin - 2010 - Inference with normal-gamma prior distributions in.pdf},
+  journal = {Bayesian Analysis},
+  number = {1}
 }
 
 @article{brown_interpolation_2020,
@@ -2455,6 +2535,17 @@
   number = {10}
 }
 
+@book{cemgil_bayesian_2018,
+  title = {Bayesian Statistical Methods for Audio and Music Processing},
+  author = {Cemgil, A. Taylan and Godsill, Simon and Peeling, Paul and Whiteley, Nick},
+  year = {2018},
+  month = aug,
+  volume = {1},
+  publisher = {{Oxford University Press}},
+  file = {/home/msca8h/Zotero/storage/37I4UB7G/Cemgil et al. - 2018 - Bayesian statistical methods for audio and music p.pdf},
+  language = {en}
+}
+
 @article{cerqueira_novel_2017,
   title = {A Novel {{GPU}}-Based Sonar Simulator for Real-Time Applications},
   author = {Cerqueira, R{\^o}mulo and Trocoli, Tiago and Neves, Gustavo and Joyeux, Sylvain and Albiez, Jan and Oliveira, Luciano},
@@ -2613,6 +2704,18 @@
   file = {/home/msca8h/Documents/parallel_scheduling/Chen and Guo - 2018 - Contention and Locality-Aware Work-Stealing for It.pdf;/home/msca8h/Documents/parallel_scheduling/Chen and Guo - 2018 - Contention and Locality-Aware Work-Stealing for It.pdf},
   journal = {IEEE Transactions on Computers},
   number = {6}
+}
+
+@article{chen_detection_1991,
+  title = {Detection of the Number of Signals: A Predicted Eigen-Threshold Approach},
+  shorttitle = {Detection of the Number of Signals},
+  author = {Chen, W. and Wong, K.M. and Reilly, J.P.},
+  year = {1991},
+  month = may,
+  volume = {39},
+  pages = {1088--1098},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {5}
 }
 
 @article{chen_fast_2019,
@@ -2789,6 +2892,18 @@
   address = {{Paris, France}}
 }
 
+@article{chung_detection_2007,
+  title = {Detection of the Number of Signals Using the {{Benjamini}}-{{Hochberg}} Procedure},
+  author = {Chung, Pei-Jung and Bohme, Johann F. and Mecklenbrauker, Christoph F. and Hero, Alfred O.},
+  year = {2007},
+  month = jun,
+  volume = {55},
+  pages = {2497--2508},
+  file = {/home/msca8h/Zotero/storage/ZMCIRCTD/Chung et al. - 2007 - Detection of the Number of Signals Using the Benja.pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {6}
+}
+
 @article{churchill_synthetic_2020,
   title = {Synthetic {{Aperture Radar Image}} Formation with Uncertainty Quantification},
   author = {Churchill, Victor and Gelb, Anne},
@@ -2925,6 +3040,17 @@
   file = {/home/msca8h/Zotero/storage/BGBDC9EL/Coll-Font and Brooks - 2017 - ECG-Based Reconstruction of Heart Position and Ori.pdf}
 }
 
+@article{consonni_prior_2018,
+  title = {Prior Distributions for Objective {{Bayesian}} Analysis},
+  author = {Consonni, Guido and Fouskakis, Dimitris and Liseo, Brunero and Ntzoufras, Ioannis},
+  year = {2018},
+  month = jun,
+  volume = {13},
+  file = {/home/msca8h/Zotero/storage/RA75BCQH/Consonni et al. - 2018 - Prior Distributions for Objective Bayesian Analysi.pdf},
+  journal = {Bayesian Analysis},
+  number = {2}
+}
+
 @article{contrerasortiz_ultrasound_2012,
   title = {Ultrasound Image Enhancement: A Review},
   shorttitle = {Ultrasound Image Enhancement},
@@ -2948,6 +3074,17 @@
 }
 
 @article{copsey_bayesian_2002,
+  title = {Bayesian Analysis of Generalized Frequency-Modulated Signals},
+  author = {Copsey, K. and Gordon, N. and Marrs, A.},
+  year = {2002},
+  month = mar,
+  volume = {50},
+  pages = {725--735},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {3}
+}
+
+@article{copsey_bayesian_2002a,
   title = {Bayesian Analysis of Generalized Frequency-Modulated Signals},
   author = {Copsey, K. and Gordon, N. and Marrs, A.},
   year = {2002},
@@ -3203,12 +3340,35 @@
   number = {1}
 }
 
+@article{davy_bayesian_2006,
+  title = {Bayesian Analysis of Polyphonic Western Tonal Music},
+  author = {Davy, Manuel and Godsill, Simon and Idier, J{\'e}r{\^o}me},
+  year = {2006},
+  month = apr,
+  volume = {119},
+  pages = {2498--2517},
+  journal = {The Journal of the Acoustical Society of America},
+  language = {en},
+  number = {4}
+}
+
 @article{davy_classification_2002,
   title = {Classification of Chirp Signals Using Hierarchical {{Bayesian}} Learning and {{MCMC}} Methods},
   author = {Davy, M. and Doncarli, C. and Tourneret, J.-Y.},
   year = {Feb./2002},
   volume = {50},
   pages = {377--388},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {2}
+}
+
+@article{davy_classification_2002a,
+  title = {Classification of Chirp Signals Using Hierarchical {{Bayesian}} Learning and {{MCMC}} Methods},
+  author = {Davy, M. and Doncarli, C. and Tourneret, J.-Y.},
+  year = {Feb./2002},
+  volume = {50},
+  pages = {377--388},
+  file = {/home/msca8h/Zotero/storage/6CC7MJPM/Davy et al. - 2002 - Classification of chirp signals using hierarchical.pdf},
   journal = {IEEE Transactions on Signal Processing},
   number = {2}
 }
@@ -3317,6 +3477,18 @@
   journal = {Statistica Neerlandica},
   language = {en},
   number = {2}
+}
+
+@article{degroot_conversation_1986,
+  title = {A Conversation with {{Charles Stein}}},
+  author = {DeGroot, Morris H.},
+  year = {1986},
+  volume = {1},
+  pages = {454--462},
+  publisher = {{Institute of Mathematical Statistics}},
+  file = {/home/msca8h/Zotero/storage/V7KJIELJ/DeGroot - 1986 - A Conversation with Charles Stein.pdf},
+  journal = {Statistical Science},
+  number = {4}
 }
 
 @book{delmoral_feynmankac_2004,
@@ -3510,6 +3682,29 @@
   pages = {1--8},
   file = {/home/msca8h/Documents/parallel_scheduling/Diaz et al. - 2006 - A Quadratic Self-Scheduling Algorithm for Heteroge.pdf},
   keywords = {Algorithm design and analysis,Application software,Clustering algorithms,Distributed computing,grid computing,Grid computing,heterogeneous computing systems,heterogeneous distributed computing systems,Heuristic algorithms,Internet,Processor scheduling,quadratic self-scheduling algorithm,resource allocation,scheduling,Scheduling algorithm,scheduling strategy,Testing,transatlantic connection}
+}
+
+@article{diclaudio_robust_2003,
+  title = {Robust {{ML}} Wideband Beamforming in Reverberant Fields},
+  author = {Di Claudio, E.D. and Parisi, R.},
+  year = {2003},
+  month = feb,
+  volume = {51},
+  pages = {338--349},
+  journal = {IEEE Transactions on Signal Processing},
+  language = {en},
+  number = {2}
+}
+
+@article{diclaudio_waves_2001,
+  title = {{{WAVES}}: Weighted Average of Signal Subspaces for Robust Wideband Direction Finding},
+  shorttitle = {{{WAVES}}},
+  author = {{di Claudio}, E.D. and Parisi, R.},
+  year = {Oct./2001},
+  volume = {49},
+  pages = {2179--2191},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {10}
 }
 
 @article{dinan_scalable_2009,
@@ -3777,6 +3972,18 @@
   number = {TR92-01-01,}
 }
 
+@article{eches_estimating_2010,
+  title = {Estimating the Number of Endmembers in Hyperspectral Images Using the Normal Compositional Model and a Hierarchical {{Bayesian}} Algorithm},
+  author = {Eches, Olivier and Dobigeon, Nicolas and Tourneret, Jean-Yves},
+  year = {2010},
+  month = jun,
+  volume = {4},
+  pages = {582--591},
+  file = {/home/msca8h/Zotero/storage/FMXN8K9K/Eches et al. - 2010 - Estimating the Number of Endmembers in Hyperspectr.pdf},
+  journal = {IEEE Journal of Selected Topics in Signal Processing},
+  number = {3}
+}
+
 @incollection{edgar_introduction_2011,
   title = {Introduction to {{Synthetic Aperture Sonar}}},
   booktitle = {Sonar {{Systems}}},
@@ -3786,6 +3993,17 @@
   publisher = {{InTech}},
   file = {/home/msca8h/Zotero/storage/BMQL4KR9/Edgar - 2011 - Introduction to Synthetic Aperture Sonar.pdf},
   language = {en}
+}
+
+@article{efron_stein_1973,
+  title = {Stein's Estimation Rule and Its Competitors--an Empirical {{Bayes}} Approach},
+  author = {Efron, Bradley and Morris, Carl},
+  year = {1973},
+  month = mar,
+  volume = {68},
+  pages = {117},
+  journal = {Journal of the American Statistical Association},
+  number = {341}
 }
 
 @inproceedings{eggensperger_efficient_2015,
@@ -3904,6 +4122,18 @@
   volume = {28},
   pages = {335--354},
   journal = {IEEE Transactions on Aerospace and Electronic Systems},
+  number = {2}
+}
+
+@article{fang_patterncoupled_2015,
+  title = {Pattern-Coupled Sparse {{Bayesian}} Learning for Recovery of Block-Sparse Signals},
+  author = {Fang, Jun and Shen, Yanning and Li, Hongbin and Wang, Pu},
+  year = {2015},
+  month = jan,
+  volume = {63},
+  pages = {360--372},
+  file = {/home/msca8h/Zotero/storage/YLI8XZFS/Fang et al. - 2015 - Pattern-Coupled Sparse Bayesian Learning for Recov.pdf},
+  journal = {IEEE Transactions on Signal Processing},
   number = {2}
 }
 
@@ -4368,6 +4598,21 @@
   primaryclass = {stat}
 }
 
+@article{gelman_bayesian_2020a,
+  title = {Bayesian Workflow},
+  author = {Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C. and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and B{\"u}rkner, Paul-Christian and Modr{\'a}k, Martin},
+  year = {2020},
+  month = nov,
+  publisher = {{arXiv}},
+  archiveprefix = {arXiv},
+  eprint = {2011.01808},
+  eprinttype = {arxiv},
+  file = {/home/msca8h/Zotero/storage/UEJEGY8R/Gelman et al. - 2020 - Bayesian Workflow.pdf},
+  keywords = {Statistics - Methodology},
+  number = {arXiv:2011.01808},
+  primaryclass = {stat}
+}
+
 @book{gelman_data_2007,
   title = {Data Analysis Using Regression and Multilevel/Hierarchical Models},
   author = {Gelman, Andrew and Hill, Jennifer},
@@ -4538,6 +4783,28 @@
   number = {4}
 }
 
+@article{godsill_bayesian_1997,
+  title = {Bayesian Enhancement of Speech and Audio Signals Which Can Be Modelled as {{ARMA}} Processes},
+  author = {Godsill, Simon J.},
+  year = {1997},
+  month = apr,
+  volume = {65},
+  pages = {1},
+  journal = {International Statistical Review / Revue Internationale de Statistique},
+  number = {1}
+}
+
+@article{godsill_statistical_1998,
+  title = {Statistical Reconstruction and Analysis of Autoregressive Signals in Impulsive Noise Using the {{Gibbs}} Sampler},
+  author = {Godsill, S.J. and Rayner, P.J.W.},
+  year = {1998},
+  month = jul,
+  volume = {6},
+  pages = {352--372},
+  journal = {IEEE Transactions on Speech and Audio Processing},
+  number = {4}
+}
+
 @article{goldstein_reducedrank_1997,
   title = {Reduced-Rank Adaptive Filtering},
   author = {Goldstein, J.S. and Reed, I.S.},
@@ -4565,6 +4832,16 @@
   journal = {IEE Proceedings F Radar and Signal Processing},
   language = {en},
   number = {2}
+}
+
+@inproceedings{gorham_measuring_2015,
+  title = {Measuring Sample Quality with {{Stein}}' s Method},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Gorham, Jackson and Mackey, Lester},
+  year = {2015},
+  volume = {28},
+  publisher = {{Curran Associates, Inc.}},
+  file = {/home/msca8h/Zotero/storage/HFWZFM4R/Gorham and Mackey - 2015 - Measuring Sample Quality with Stein' s Method.pdf}
 }
 
 @article{gorman_analysis_1988,
@@ -4784,6 +5061,30 @@
   publisher = {{PMLR}},
   address = {{Playa Blanca, Lanzarote, Canary Islands}},
   series = {Proceedings of {{Machine Learning Research}}}
+}
+
+@article{gupta_information_2009,
+  title = {An Information Matrix Prior for {{Bayesian}} Analysis in Generalized Linear Models with High Dimensional Data},
+  author = {Gupta, Mayetri and Ibrahim, Joseph G.},
+  year = {2009},
+  volume = {19},
+  pages = {1641--1663},
+  publisher = {{Institute of Statistical Science, Academia Sinica}},
+  file = {/home/msca8h/Zotero/storage/H6F7EH6I/Gupta and Ibrahim - 2009 - AN INFORMATION MATRIX PRIOR FOR BAYESIAN ANALYSIS .pdf},
+  journal = {Statistica Sinica},
+  number = {4}
+}
+
+@article{gupta_variable_2007,
+  title = {Variable Selection in Regression Mixture Modeling for the Discovery of Gene Regulatory Networks},
+  author = {Gupta, Mayetri and Ibrahim, Joseph G},
+  year = {2007},
+  month = sep,
+  volume = {102},
+  pages = {867--880},
+  journal = {Journal of the American Statistical Association},
+  language = {en},
+  number = {479}
 }
 
 @article{gustafson_reevaluating_1988,
@@ -5360,6 +5661,17 @@
   language = {en}
 }
 
+@article{hyder_directionofarrival_2010,
+  title = {Direction-of-Arrival Estimation Using a Mixed \$\textbackslash ell \_\{2,0\}\$ Norm Approximation},
+  author = {Hyder, M M and Mahata, K},
+  year = {2010},
+  month = sep,
+  volume = {58},
+  pages = {4646--4655},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {9}
+}
+
 @article{iba_population_2001,
   title = {Population {{Monte Carlo}} Algorithms.},
   author = {Iba, Yukito},
@@ -5444,6 +5756,18 @@
   journal = {Journal of Computational and Graphical Statistics},
   language = {en},
   number = {3}
+}
+
+@article{jacobs_sparse_2018,
+  title = {Sparse {{Bayesian}} Nonlinear System Identification Using Variational Inference},
+  author = {Jacobs, William R. and Baldacchino, Tara and Dodd, Tony and Anderson, Sean R.},
+  year = {2018},
+  month = dec,
+  volume = {63},
+  pages = {4172--4187},
+  file = {/home/msca8h/Zotero/storage/4T6KUV9V/Jacobs et al. - 2018 - Sparse Bayesian Nonlinear System Identification Us.pdf},
+  journal = {IEEE Transactions on Automatic Control},
+  number = {12}
 }
 
 @incollection{jamil_test_2013,
@@ -6313,6 +6637,28 @@
   file = {/home/msca8h/Documents/bayesian_optimization/Kochanski et al. - 2017 - Bayesian Optimization for a Better Dessert.pdf}
 }
 
+@incollection{koivunen_model_2014,
+  title = {Model Order Selection},
+  booktitle = {Academic {{Press Library}} in {{Signal Processing}}},
+  author = {Koivunen, Visa and Ollila, Esa},
+  year = {2014},
+  volume = {3},
+  pages = {9--25},
+  publisher = {{Elsevier}},
+  language = {en}
+}
+
+@incollection{koivunen_model_2014a,
+  title = {Model Order Selection},
+  booktitle = {Academic {{Press Library}} in {{Signal Processing}}},
+  author = {Koivunen, Visa and Ollila, Esa},
+  year = {2014},
+  volume = {3},
+  pages = {9--25},
+  publisher = {{Elsevier}},
+  language = {en}
+}
+
 @techreport{kong_note_1992,
   title = {A Note on Importance Sampling Using Standardized Weights},
   author = {Kong, Augustine},
@@ -6333,6 +6679,17 @@
   journal = {Journal of the American Statistical Association},
   language = {en},
   number = {425}
+}
+
+@article{korobilis_bayesian_2022,
+  title = {Bayesian Approaches to Shrinkage and Sparse Estimation},
+  author = {Korobilis, Dimitris and Shimizu, Kenichi},
+  year = {2022},
+  month = jun,
+  volume = {11},
+  pages = {230--354},
+  journal = {Foundations and Trends\textregistered{} in Econometrics},
+  number = {4}
 }
 
 @article{kovesi_image_1999,
@@ -6393,6 +6750,18 @@
   number = {5}
 }
 
+@article{kritchman_nonparametric_2009,
+  title = {Non-Parametric Detection of the Number of Signals: Hypothesis Testing and Random Matrix Theory},
+  shorttitle = {Non-{{Parametric Detection}} of the {{Number}} of {{Signals}}},
+  author = {Kritchman, S. and Nadler, B.},
+  year = {2009},
+  month = oct,
+  volume = {57},
+  pages = {3930--3941},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {10}
+}
+
 @inproceedings{krizhevsky_imagenet_2012,
   title = {{{ImageNet Classification}} with {{Deep Convolutional Neural Networks}}},
   booktitle = {Proceedings of the 25th {{International Conference}} on {{Neural Information Processing Systems}} - {{Volume}} 1},
@@ -6402,6 +6771,16 @@
   publisher = {{Curran Associates Inc.}},
   address = {{USA}},
   series = {{{NIPS}}'12}
+}
+
+@article{krolik_multiple_1989,
+  title = {Multiple Broad-Band Source Location Using Steered Covariance Matrices},
+  author = {Krolik, J. and Swingler, D.},
+  year = {Oct./1989},
+  volume = {37},
+  pages = {1481--1494},
+  journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+  number = {10}
 }
 
 @article{kruizinga_planewave_2012,
@@ -6544,6 +6923,17 @@
   address = {{Denver, CO, USA}},
   file = {/home/msca8h/Zotero/storage/7IEGGCK8/laberge et al. - 2019 - Scheduling Optimization of Parallel Linear Algebra.pdf},
   series = {{{MLHPC}}'19}
+}
+
+@article{ladaycia_performance_2017,
+  title = {Performance Bounds Analysis for Semi-Blind Channel Estimation in {{MIMO}}-{{OFDM}} Communications Systems},
+  author = {Ladaycia, Abdelhamid and Mokraoui, Anissa and {Abed-Meraim}, Karim and Belouchrani, Adel},
+  year = {2017},
+  month = sep,
+  volume = {16},
+  pages = {5925--5938},
+  journal = {IEEE Transactions on Wireless Communications},
+  number = {9}
 }
 
 @inproceedings{lafond_dfw_2016,
@@ -6878,6 +7268,19 @@
   address = {{Boston, MA}}
 }
 
+@article{li_mixtures_2018,
+  title = {Mixtures of $g$-{{Priors}} in {{Generalized Linear Models}}},
+  author = {Li, Yingbo and Clyde, Merlise A.},
+  year = {2018},
+  month = oct,
+  volume = {113},
+  pages = {1828--1845},
+  file = {/home/msca8h/Zotero/storage/9MTIAIZ3/Li and Clyde - 2018 - Mixtures of  g  -Priors in Generaliz.pdf},
+  journal = {Journal of the American Statistical Association},
+  language = {en},
+  number = {524}
+}
+
 @article{li_passive_2015,
   title = {Passive Multipath Time Delay Estimation Using {{MCMC}} Methods},
   author = {Li, Jing and Zhu, Jiandong and Feng, Zhihong and Zhao, Yongjun and Li, Donghai},
@@ -6972,6 +7375,18 @@
   volume = {69},
   pages = {4132--4148},
   journal = {IEEE Transactions on Signal Processing}
+}
+
+@article{liang_mixtures_2008,
+  title = {Mixtures of $g$ {{Priors}} for {{Bayesian Variable Selection}}},
+  author = {Liang, Feng and Paulo, Rui and Molina, German and Clyde, Merlise A and Berger, Jim O},
+  year = {2008},
+  month = mar,
+  volume = {103},
+  pages = {410--423},
+  journal = {Journal of the American Statistical Association},
+  language = {en},
+  number = {481}
 }
 
 @article{liang_sparse_2021,
@@ -7112,6 +7527,17 @@
 }
 
 @article{liu_directionofarrival_2011,
+  title = {Direction-of-Arrival Estimation of Wideband Signals via Covariance Matrix Sparse Representation},
+  author = {Liu, Zhang-Meng and Huang, Zhi-Tao and Zhou, Yi-Yu},
+  year = {2011},
+  month = sep,
+  volume = {59},
+  pages = {4256--4270},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {9}
+}
+
+@article{liu_directionofarrival_2011a,
   title = {Direction-of-Arrival Estimation of Wideband Signals via Covariance Matrix Sparse Representation},
   author = {Liu, Zhang-Meng and Huang, Zhi-Tao and Zhou, Yi-Yu},
   year = {2011},
@@ -7464,6 +7890,18 @@
   number = {9}
 }
 
+@article{malioutov_sparse_2005,
+  title = {A Sparse Signal Reconstruction Perspective for Source Localization with Sensor Arrays},
+  author = {Malioutov, D. and Cetin, M. and Willsky, A.S.},
+  year = {2005},
+  month = aug,
+  volume = {53},
+  pages = {3010--3022},
+  file = {/home/msca8h/Zotero/storage/6L77BAGA/Malioutov et al. - 2005 - A sparse signal reconstruction perspective for sou.pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {8}
+}
+
 @incollection{malkomes_automating_2018,
   title = {Automating {{Bayesian}} Optimization with {{Bayesian}} Optimization},
   booktitle = {Advances in {{Neural Information Processing Systems}} 31},
@@ -7696,6 +8134,29 @@
   number = {5}
 }
 
+@article{maruyama_fully_2011,
+  title = {Fully {{Bayes}} Factors with a Generalized $g$ -Prior},
+  author = {Maruyama, Yuzo and George, Edward I.},
+  year = {2011},
+  month = oct,
+  volume = {39},
+  file = {/home/msca8h/Zotero/storage/RFHEVJEA/Maruyama and George - 2011 - Fully Bayes factors with a generalized g-prior.pdf},
+  journal = {The Annals of Statistics},
+  number = {5}
+}
+
+@article{matsaglia_equalities_1974,
+  title = {Equalities and Inequalities for Ranks of Matrices},
+  author = {Matsaglia, George and P. H. Styan, George},
+  year = {1974},
+  month = jan,
+  volume = {2},
+  pages = {269--292},
+  journal = {Linear and Multilinear Algebra},
+  language = {en},
+  number = {3}
+}
+
 @book{mcbook,
   title = {Monte {{Carlo}} Theory, Methods and Examples},
   author = {Owen, Art B.},
@@ -7793,6 +8254,17 @@
   year = {2020}
 }
 
+@inproceedings{meronen_periodic_2021,
+  title = {Periodic Activation Functions Induce Stationarity},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Meronen, Lassi and Trapp, Martin and Solin, Arno},
+  year = {2021},
+  volume = {34},
+  pages = {1673--1685},
+  publisher = {{Curran Associates, Inc.}},
+  file = {/home/msca8h/Zotero/storage/MLS7XUWU/Meronen et al. - 2021 - Periodic Activation Functions Induce Stationarity.pdf}
+}
+
 @article{mesquita_embarrassingly_2019,
   title = {Embarrassingly Parallel {{MCMC}} Using Deep Invertible Transformations},
   author = {Mesquita, Diego and Blomstedt, Paul and Kaski, Samuel},
@@ -7843,6 +8315,22 @@
   journal = {Physical Review E},
   language = {en},
   number = {1}
+}
+
+@article{mikkola_prior_2021,
+  title = {Prior Knowledge Elicitation: {{The}} Past, Present, and Future},
+  shorttitle = {Prior Knowledge Elicitation},
+  author = {Mikkola, Petrus and Martin, Osvaldo A. and Chandramouli, Suyog and Hartmann, Marcelo and Pla, Oriol Abril and Thomas, Owen and Pesonen, Henri and Corander, Jukka and Vehtari, Aki and Kaski, Samuel and B{\"u}rkner, Paul-Christian and Klami, Arto},
+  year = {2021},
+  month = dec,
+  publisher = {{arXiv}},
+  archiveprefix = {arXiv},
+  eprint = {2112.01380},
+  eprinttype = {arxiv},
+  file = {/home/msca8h/Zotero/storage/M9YSBVI4/Mikkola et al. - 2021 - Prior knowledge elicitation The past, present, an.pdf;/home/msca8h/Zotero/storage/RQFU3JWT/2112.html},
+  keywords = {Statistics - Methodology},
+  number = {arXiv:2112.01380},
+  primaryclass = {stat}
 }
 
 @article{ming-yuenchan_perceptionbased_2009,
@@ -8101,6 +8589,19 @@
   series = {{{ASPLOS XIV}}}
 }
 
+@article{nadler_nonparametric_2010,
+  title = {Nonparametric Detection of Signals by Information Theoretic Criteria: {{Performance}} Analysis and an Improved Estimator},
+  shorttitle = {Nonparametric {{Detection}} of {{Signals}} by {{Information Theoretic Criteria}}},
+  author = {Nadler, Boaz},
+  year = {2010},
+  month = may,
+  volume = {58},
+  pages = {2746--2756},
+  file = {/home/msca8h/Zotero/storage/H5MB534R/Nadler - 2010 - Nonparametric Detection of Signals by Information .pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {5}
+}
+
 @article{naesseth_elements_2019,
   title = {Elements of {{Sequential Monte Carlo}}},
   author = {Naesseth, Christian A. and Lindsten, Fredrik and Sch{\"o}n, Thomas B.},
@@ -8242,7 +8743,6 @@
   pages = {705--767},
   file = {/home/msca8h/Zotero/storage/EE77CBUZ/Neal - 2003 - Slice sampling.pdf},
   journal = {The Annals of Statistics},
-  language = {en},
   number = {3}
 }
 
@@ -8520,6 +9020,42 @@
   pages = {1305--1319},
   journal = {IEEE Transactions on Signal Processing},
   number = {5}
+}
+
+@inproceedings{nielsen_bayesian_2013,
+  title = {Bayesian Model Comparison and the {{BIC}} for Regression Models},
+  booktitle = {2013 {{IEEE International Conference}} on {{Acoustics}}, {{Speech}} and {{Signal Processing}}},
+  author = {Nielsen, Jesper Kjoer and Christensen, Mads Groesboll and Jensen, Soren Holdt},
+  year = {2013},
+  month = may,
+  pages = {6362--6366},
+  publisher = {{IEEE}},
+  address = {{Vancouver, BC, Canada}},
+  file = {/home/msca8h/Zotero/storage/ZD7CGLWY/Nielsen et al. - 2013 - Bayesian model comparison and the BIC for regressi.pdf}
+}
+
+@article{nielsen_bayesian_2014,
+  title = {Bayesian Model Comparison with the G-Prior},
+  author = {Nielsen, Jesper Kjaer and Christensen, Mads Graesboll and Cemgil, Ali Taylan and Jensen, Soren Holdt},
+  year = {2014},
+  month = jan,
+  volume = {62},
+  pages = {225--238},
+  file = {/home/msca8h/Zotero/storage/6V9MWGWM/Nielsen et al. - 2014 - Bayesian Model Comparison With the g-Prior.pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {1}
+}
+
+@article{nielsen_bayesian_2014a,
+  title = {Bayesian Model Comparison with the G-Prior},
+  author = {Nielsen, Jesper Kjaer and Christensen, Mads Graesboll and Cemgil, Ali Taylan and Jensen, Soren Holdt},
+  year = {2014},
+  month = jan,
+  volume = {62},
+  pages = {225--238},
+  file = {/home/msca8h/Zotero/storage/YFD3ZP8B/Nielsen et al. - 2014 - Bayesian Model Comparison With the g-Prior.pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {1}
 }
 
 @inproceedings{NIPS2005_4491777b,
@@ -10153,6 +10689,36 @@
   number = {14}
 }
 
+@inproceedings{roodaki_joint_2010,
+  title = {On the Joint {{Bayesian}} Model Selection and Estimation of Sinusoids via {{Reversible Jump MCMC}} in Low {{SNR}} Situations},
+  booktitle = {Proceedings of the {{International Conference}} on {{Information Science}}, {{Signal Processing}} and Their {{Applications}}},
+  author = {Roodaki, Alireza and Bect, Julien and Fleury, Gilles},
+  year = {2010},
+  month = may,
+  pages = {5--8},
+  publisher = {{IEEE}},
+  address = {{Kuala Lumpur, Malaysia}}
+}
+
+@article{roodaki_relabeling_2014,
+  title = {Relabeling and {{Summarizing Posterior Distributions}} in {{Signal Decomposition Problems When}} the {{Number}} of {{Components}} Is {{Unknown}}},
+  author = {Roodaki, Alireza and Bect, Julien and Fleury, Gilles},
+  year = {2014},
+  month = aug,
+  volume = {62},
+  pages = {4091--4104},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {16}
+}
+
+@phdthesis{roodaki_signal_2012,
+  title = {Signal Decompositions Using Trans-Dimensional {{Bayesian}} Methods},
+  author = {Roodaki, Alireza},
+  year = {2012},
+  school = {\'Ecole sup\'erieure d'\'electricit\'e},
+  type = {Ph.{{D Thesis}}}
+}
+
 @article{rosenthal_asymptotic_2003,
   title = {Asymptotic Variance and Convergence Rates of Nearly-Periodic {{Markov}} Chain {{Monte}} Carlo Algorithms},
   author = {Rosenthal, Jeffrey S},
@@ -10268,6 +10834,17 @@
   pages = {1362--1371},
   publisher = {{IEEE}},
   address = {{Orlando / Buena Vista, FL, USA}}
+}
+
+@article{sabanesbove_hyper_2011,
+  title = {Hyper-$g$ Priors for Generalized Linear Models},
+  author = {Saban{\'e}s Bov{\'e}, Daniel and Held, Leonhard},
+  year = {2011},
+  month = sep,
+  volume = {6},
+  file = {/home/msca8h/Zotero/storage/E6LE9EVU/Sabanés Bové and Held - 2011 - Hyper-$g$ priors for generalized linear models.pdf},
+  journal = {Bayesian Analysis},
+  number = {3}
 }
 
 @incollection{salimans_weight_2016,
@@ -10835,6 +11412,21 @@
   number = {3}
 }
 
+@article{som_block_2015,
+  title = {Block Hyper-$g$  Priors in {{Bayesian}} Regression},
+  author = {Som, Agniva and Hans, Christopher M. and MacEachern, Steven N.},
+  year = {2015},
+  month = jan,
+  publisher = {{arXiv}},
+  archiveprefix = {arXiv},
+  eprint = {1406.6419},
+  eprinttype = {arxiv},
+  file = {/home/msca8h/Zotero/storage/5WH2FGKU/Som et al. - 2015 - Block Hyper-g Priors in Bayesian Regression.pdf;/home/msca8h/Zotero/storage/IRTHJT7L/1406.html},
+  keywords = {Mathematics - Statistics Theory,Statistics - Methodology},
+  number = {arXiv:1406.6419},
+  primaryclass = {math, stat}
+}
+
 @article{somasundaram_wideband_2013,
   title = {Wideband Robust {{Capon}} Beamforming for Passive Sonar},
   author = {Somasundaram, Samuel D.},
@@ -10924,6 +11516,17 @@
   number = {4}
 }
 
+@article{sparks_necessary_2015,
+  title = {Necessary and Sufficient Conditions for High-Dimensional Posterior Consistency under g-Priors},
+  author = {Sparks, Douglas K. and Khare, Kshitij and Ghosh, Malay},
+  year = {2015},
+  month = sep,
+  volume = {10},
+  file = {/home/msca8h/Zotero/storage/MXLBP4JC/Sparks et al. - 2015 - Necessary and Sufficient Conditions for High-Dimen.pdf},
+  journal = {Bayesian Analysis},
+  number = {3}
+}
+
 @article{spiegelhalter1996bugs,
   title = {{{BUGS}}: {{Bayesian}} Inference Using Gibbs Sampling},
   author = {Spiegelhalter, David J and Thomas, Andrew and Best, Nicky G and Gilks, Wally and Lunn, D},
@@ -10993,6 +11596,30 @@
   year = {2020}
 }
 
+@article{stein_bound_1972,
+  title = {A Bound for the Error in the Normal Approximation to the Distribution of a Sum of Dependent Random Variables},
+  author = {Stein, Charles},
+  year = {1972},
+  month = jan,
+  volume = {6.2},
+  pages = {583--603},
+  publisher = {{University of California Press}},
+  file = {/home/msca8h/Zotero/storage/ANBQ8J32/1200514239.html},
+  journal = {Proceedings of the Sixth Berkeley Symposium on Mathematical Statistics and Probability, Volume 2: Probability Theory}
+}
+
+@article{stein_inadmissibility_1956,
+  title = {Inadmissibility of the Usual Estimator for the Mean of a Multivariate Normal Distribution},
+  author = {Stein, Charles},
+  year = {1956},
+  month = jan,
+  volume = {3.1},
+  pages = {197--207},
+  publisher = {{University of California Press}},
+  file = {/home/msca8h/Zotero/storage/KWBI275T/1200501656.html},
+  journal = {Proceedings of the Third Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Contributions to the Theory of Statistics}
+}
+
 @article{stergiopoulos_implementation_1998,
   title = {Implementation of Adaptive and Synthetic-Aperture Processing Schemes in Integrated Active-Passive Sonar Systems},
   author = {Stergiopoulos, S.},
@@ -11030,6 +11657,18 @@
   keywords = {Computer Science - Machine Learning,Mathematics - Numerical Analysis,Mathematics - Optimization and Control,Statistics - Machine Learning},
   number = {arXiv:1907.04232},
   primaryclass = {cs, math, stat}
+}
+
+@article{stoica_modelorder_2004,
+  title = {Model-Order Selection},
+  author = {Stoica, P. and Selen, Y.},
+  year = {2004},
+  month = jul,
+  volume = {21},
+  pages = {36--47},
+  journal = {IEEE Signal Processing Magazine},
+  language = {en},
+  number = {4}
 }
 
 @article{streijl_mean_2016,
@@ -11531,6 +12170,14 @@
   journal = {arXiv preprint arXiv:1610.09787}
 }
 
+@techreport{trippe_overpruning_2017,
+  title = {Overpruning in Variational {{Bayesian}} Neural Networks},
+  author = {Trippe, Brian and Turner, Richard},
+  year = {2017},
+  institution = {{ArXiv}},
+  number = {arXiv:1801.06230}
+}
+
 @article{turner_how_2017,
   title = {How Well Does Your Sampler Really Work?},
   author = {Turner, Ryan and Neal, Brady},
@@ -11594,6 +12241,16 @@
   volume = {43},
   pages = {160--172},
   file = {/home/msca8h/Zotero/storage/7HLV5RLN/Valaee and Kabal - 1995 - Wideband array processing using a two-sided correl.pdf},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {1}
+}
+
+@article{valaee_wideband_1995a,
+  title = {Wideband Array Processing Using a Two-Sided Correlation Transformation},
+  author = {Valaee, S. and Kabal, P.},
+  year = {Jan./1995},
+  volume = {43},
+  pages = {160--172},
   journal = {IEEE Transactions on Signal Processing},
   number = {1}
 }
@@ -11967,6 +12624,17 @@
   file = {/home/msca8h/Zotero/storage/5U5TFW55/Wang - 2020 - Exact Convergence Rate Analysis of the Independent.pdf;/home/msca8h/Zotero/storage/4F26VXU9/2008.html},
   journal = {To appear in Bernoulli},
   keywords = {Mathematics - Probability,Mathematics - Spectral Theory,Mathematics - Statistics Theory,Statistics - Computation}
+}
+
+@article{wang_grid_2018,
+  title = {Grid Evolution Method for {{DOA}} Estimation},
+  author = {Wang, Qianli and Zhao, Zhiqin and Chen, Zhuming and Nie, Zaiping},
+  year = {2018},
+  month = may,
+  volume = {66},
+  pages = {2374--2383},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {9}
 }
 
 @article{wang_image_2004,
@@ -12600,6 +13268,31 @@
   keywords = {Analytical modeling,Parallel loop scheduling,Performance analysis,Scalability,Shared memory multiprocessor}
 }
 
+@incollection{zellner_assessing_1986,
+  title = {On Assessing Prior Distributions and {{Bayesian}} Regression Analysis with g Prior Distributions},
+  booktitle = {Bayesian {{Inference}} and {{Decision Techniques}}: {{Essays}} in {{Honor}} of {{Bruno}} de {{Finetti}}},
+  author = {Zellner, Arnold},
+  year = {1986},
+  month = jun,
+  pages = {233--243},
+  publisher = {{Elsevier}},
+  address = {{New York}},
+  number = {6},
+  series = {Studies in {{Bayesian Econometrics}} and {{Statistics}}}
+}
+
+@article{zellner_posterior_1980,
+  title = {Posterior Odds Ratios for Selected Regression Hypotheses},
+  author = {Zellner, A. and Siow, A.},
+  year = {1980},
+  month = feb,
+  volume = {31},
+  pages = {585--603},
+  journal = {Trabajos de Estadistica Y de Investigacion Operativa},
+  language = {en},
+  number = {1}
+}
+
 @article{zeng_nonconvex_2018,
   title = {On {{Nonconvex Decentralized Gradient Descent}}},
   author = {Zeng, Jinshan and Yin, Wotao},
@@ -12756,6 +13449,17 @@
   number = {2}
 }
 
+@inproceedings{zhao_capon_2016,
+  title = {Capon Cepstrum Weighted L2, 1 Minimization for Wideband {{DOA}} Estimation with Sonar Arrays},
+  booktitle = {{{OCEANS}} 2016 - {{Shanghai}}},
+  author = {Zhao, Wenqiang and Li, Gang and Zheng, Chundi and Ge, Fengxiang},
+  year = {2016},
+  month = apr,
+  pages = {1--4},
+  publisher = {{IEEE}},
+  address = {{Shanghai, China}}
+}
+
 @article{zheng_joint_2020,
   title = {Joint Towed Array Shape and Direction of Arrivals Estimation Using Sparse {{Bayesian}} Learning during Maneuvering},
   author = {Zheng, Zheng and Yang, T. C. and Gerstoft, Peter and Pan, Xiang},
@@ -12853,6 +13557,17 @@
   journal = {BMC Bioinformatics},
   language = {en},
   number = {1}
+}
+
+@article{zijiantang_aliasingfree_2011,
+  title = {Aliasing-Free Wideband Beamforming Using Sparse Signal Representation},
+  author = {{Zijian Tang} and Blacquiere, G and Leus, G},
+  year = {2011},
+  month = jul,
+  volume = {59},
+  pages = {3464--3469},
+  journal = {IEEE Transactions on Signal Processing},
+  number = {7}
 }
 
 @inproceedings{zima_modelguided_2009,
