--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -80,3 +80,13 @@
   teaser = {/assets/img/teasers/hermes.png},
   link = {https://www.researchgate.net/publication/348980534_A_GPU_Scheduling_Framework_to_Accelerate_Hyper-Parameter_Optimization_in_Deep_Learning_Clusters}
 }
+
+@inproceedings{kim_markov_2022,
+  title = {{{Markov}} {{Chain}} {{Score}} {{Ascent}}: {{A}} Unifying Framework of Variational Inference with {{Markovian}} Gradients},
+  author = {Kim, Kyurae and Oh, Jisu and Gardner, Jacob R. and Dieng, Adji Bousso and Kim, Hongseok},
+  year = {2022},
+  selected = {true},
+  booktitle = {To be presented at {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+  code = {https://github.com/Red-Portal/KLpqVI.jl},
+  link = {https://www.researchgate.net/publication/356601649_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
+}
