--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   author = {Kim, Kyurae and Oh, Jisu and Gardner, Jacob R. and Dieng, Adji Bousso and Kim, Hongseok},
   year = {2022},
   selected = {true},
+  teaser = {/assets/img/teasers/mcsa_airfoil.png},
   booktitle = {To be presented at {{Neural}} {{Information}} {{Processing}} {{Systems}}},
   code = {https://github.com/Red-Portal/KLpqVI.jl},
   link = {https://www.researchgate.net/publication/356601649_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
