--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year = {2022},
   selected = {true},
   teaser = {/assets/img/teasers/mcsa_airfoil.png},
-  booktitle = {To be presented at {{Neural}} {{Information}} {{Processing}} {{Systems}}},
+  booktitle = {{{Advances}} in {{Neural}} {{Information}} {{Processing}} {{Systems}} (to be presented)},
   code = {https://github.com/Red-Portal/KLpqVI.jl},
   link = {https://www.researchgate.net/publication/356601649_Markov_Chain_Score_Ascent_A_Unifying_Framework_of_Variational_Inference_with_Markovian_Gradients}
 }
